# banzai

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  bundle.sh  index.html  package-lock.json  package.json  pnpm-lock.yaml
.github/: dependabot.yml
.github/workflows/: build.yml  osv-scanner.yml  release.yml
Banzai.app/Contents/: Info.plist
Banzai.app/Contents/MacOS/: banzai
Casks/: banzai.rb
scripts/: release.sh  release.ts  update-cask.sh
src/: App.tsx  main.rs  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
